--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
               <li class="list-group-item">Extensive ops experience</li>
               <li class="list-group-item">Ruby, Javascript and others</li>
               <li class="list-group-item">Scrum, agile, from idea to execution</li>
-              <li class="list-group-item">joachim@nolten.org /
+              <li class="list-group-item">
+                <a href="mailto:joachim@nolten.org">joachim@nolten.org</a> /
                 <a href="https://twitter.com/stiller">@stiller</a>
               </li>
             </u>
