--- a/index.html
+++ b/index.html
@@ -43,23 +43,23 @@
           <h1>Previously</h1>
 
           <p>After owning and operating a webhosting company for ten years, I
-          decided I preferred building things. So after learning some Ruby I
-          started over as a developer. After a couple of years, I joined
+          decided I preferred building things. So I learned some Ruby and I
+          started over as a developer. A couple of years later, I joined
           <a href="https://launch.blendle.com/">Blendle</a> as their fifth
           developer. I helped create and scale their micro-transaction system,
           which processess tens of milions of transactions per year.</p>
 
-          <p>After about a year I was in charge of running the core backend
+          <p>In my second year I was put in charge of running the core backend
           service and responsible for migrating our systems to Amazon
-          Webservices. After a brief stint as part of the datascience team, I
-          decided to move on. After two years seeing the company grow from a
-          handful to 70 employees, startup life was taking its toll on family
-          time.</p>
+          Webservices. After the migration was complete and brief stint as part
+          of the data science team, I decided to move on.  In the two years,
+          seeing the company grow from a handful to 70 employees, startup life
+          had been taking its toll on family time.</p>
 
           <h1>Currently</h1>
 
-          <p>I'm helping two companies getting new products out of the door. For
-          <a href="https://leaplines.com/">Leaplines</a>, I'm currently building
+          <p>I help companies get new products out the door. For
+          <a href="https://leaplines.com/">Leaplines</a>, I'm building
           a new authoring tool in React. For <a
             href="http://cashrocket.io/">Cashrocket</a>, I'm creating an MVP
           using mostly Rails and plain Javascript. I help both manage their
