Add AppMap test.

--- a/index.html
+++ b/index.html
@@ -9,13 +9,12 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
     <link href="css/main.css" rel="stylesheet">
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
+    <!-- AppMap Test -->
+    <script src="js/analytics_snippet.js"></script>
+    <script>var ZCCustomerID = 'b0d272e9-a450-4b6d-946e-77a0b8be4d60';</script>
+    <script src="js/mapper.js"></script>
+    <script src="js/test.js"></script>
+    <!-- /AppMap Test -->
   </head>
   <body>
     <header class="container">
