Update text and remove AppMap test.

--- a/index.html
+++ b/index.html
@@ -9,12 +9,6 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
     <link href="css/main.css" rel="stylesheet">
-    <!-- AppMap Test -->
-    <script src="js/analytics_snippet.js"></script>
-    <script>var ZCCustomerID = 'b0d272e9-a450-4b6d-946e-77a0b8be4d60';</script>
-    <script src="js/mapper.js"></script>
-    <script src="js/test.js"></script>
-    <!-- /AppMap Test -->
   </head>
   <body>
     <header class="container">
@@ -42,14 +36,14 @@
 
           <p>After owning and operating a webhosting company for ten years, I
           decided I preferred building things. So I learned some Ruby and I
-          started over as a developer. A couple of years later, I joined
+          started working as a developer. A couple of years later, I joined
           <a href="https://launch.blendle.com/">Blendle</a> as their fifth
           developer. I helped create and scale their micro-transaction system,
           which processess tens of milions of transactions per year.</p>
 
-          <p>In my second year I was in charge of running the core backend
+          <p>During my second year there I was in charge of running the core backend
           service and responsible for migrating our systems to Amazon
-          Webservices. After the migration was complete and brief stint as part
+          Webservices. After the migration was complete and a brief stint as part
           of the data science team, I decided to move on. After two years,
           seeing the company grow from a handful to 70 employees,
           it was time for a change.</p>
@@ -57,19 +51,23 @@
           <h1>Currently</h1>
 
           <p>I help companies get new products out the door.
-          The past year, I've take over lead development responsibilities for
+          Last year, I took over lead development responsibilities for
           <a href="https://zerocopter.com">Zerocopter</a>, build an Ember
           dashboard tool for <a href="https://leaplines.com/">Leaplines</a>
-          and a minimum viable product for
-          <a href="http://cashrocket.io/">Cashrocket</a>
-          using mostly Rails and plain Javascript.
+          and a minimum viable product for a fintech startup.
+          Recently, I've been helping the team at
+          <a href="https://www.beequip.nl">Beequip</a>.
           </p>
 
           <p>I've spent what little time I have left co-founding
-          <a href="https://snootysoftware.com">Snooty Software</a> with my old
+          <a href="http://www.snootysoftware.com">Snooty Software</a> with my old
           Blendle buddy <a href="http://luitjes.it">Lucas</a>. Recently, we
           launched our first service:
           <a href="https://textractor.snootysoftware.com">Textractor</a>.
+          My last side project was a
+          <a href="https://github.com/stiller/multipong">
+            multiplayer Pong game in Elm and Elixir.
+          </a>
           </p>
 
           <p>I like challenging, complex projects. I prefer data-driven projects
@@ -88,23 +86,23 @@
               Development
             </div>
             <div class="card-block">
-              Ruby
+              Backend
               <ul>
-                <li>Rails</li>
-                <li>Sinatra</li>
+                <li>Ruby/Rails</li>
+                <li>Elixir/Phoenix</li>
               </ul>
-              Javascript
+              Frontend
               <ul>
-                <li>React</li>
+                <li>React/Redux</li>
+                <li>Elm</li>
                 <li>Ember</li>
-                <li>Webpack</li>
               </ul>
               HTML/CSS
               <ul>
                 <li>Sass/Less</li>
                 <li>Bootstrap, Materialize, Bourbon</li>
               </ul>
-              SQL, Bash, Go, Elixir, Elm, some C, some parsing
+              SQL, Go, some C, XML
             </div>
           </div>
         </div>
@@ -137,7 +135,7 @@
       </div>
     </section>
     <section>
-      © 2017 Joachim Nolten
+      © 2018 Joachim Nolten
     </section>
   </body>
 </html>
