--- a/index.html
+++ b/index.html
@@ -52,23 +52,14 @@
 
           <p>I help companies get new products out the door.
           Last year, I took over lead development responsibilities for
-          <a href="https://zerocopter.com">Zerocopter</a>, build an Ember
-          dashboard tool for <a href="https://leaplines.com/">Leaplines</a>
-          and a minimum viable product for a fintech startup.
-          Recently, I've been helping the team at
-          <a href="https://www.beequip.nl">Beequip</a>.
-          </p>
+          <a href="https://avg-programma.nl">AVG Programma</a>. In addition, I
+          build and maintain mission critical systems for
+          <a href="https://gites.com">Gites</a> and
+          <a href="https://zerocopter.com">Zerocopter</a>.</p>
 
-          <p>I've spent what little time I have left co-founding
-          <a href="http://www.snootysoftware.com">Snooty Software</a> with my old
-          Blendle buddy <a href="http://luitjes.it">Lucas</a>. Recently, we
-          launched our first service:
-          <a href="https://textractor.snootysoftware.com">Textractor</a>.
-          My last side project was a
-          <a href="https://github.com/stiller/multipong">
-            multiplayer Pong game in Elm and Elixir.
-          </a>
-          </p>
+          <p>Recently, I co-founded
+          <a href="https://www.thecoderroom.nl">The Coder Room</a>, a development
+          agency with a focus on business driven development.</p>
 
           <p>I like challenging, complex projects. I prefer data-driven projects
           and creating tools, but I don't shy away from the odd UI challenge.</p>
@@ -135,7 +126,7 @@
       </div>
     </section>
     <section>
-      © 2018 Joachim Nolten
+      © 2024 Joachim Nolten
     </section>
   </body>
 </html>
