--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="row">
         <div class="col-sm-4">
           <div class="card">
-            <img class="card-img-top img-fluid" src="img/profile_photo.jpg" alt="Profile photo">
+            <img class="card-img-top img-fluid" src="img/profile.jpg" alt="Profile photo">
             <div class="card-block">
               <h4 class="card-title">Joachim Nolten</h4>
               <p class="card-text">A full-stack developer based in The Netherlands.</p>
